--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "@emotion/react": "^11.1.5",
+    "@types/lodash": "^4.14.168",
+    "@types/lodash-es": "^4.17.4",
     "framer-motion": "^4.0.0",
+    "lodash": "^4.17.21",
     "next": "^10.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
