--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "next": "^10.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-spring": "8.0.27",
+    "react-use-gesture": "^9.1.3",
     "sass": "^1.32.8"
   },
   "devDependencies": {
