--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "@emotion/styled": "^11.1.5",
     "@types/lodash": "^4.14.168",
     "@types/lodash-es": "^4.17.4",
+    "date-fns": "^2.19.0",
     "framer-motion": "^4.0.0",
+    "gray-matter": "^4.0.2",
     "lodash": "^4.17.21",
     "next": "^10.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-spring": "8.0.27",
     "react-use-gesture": "^9.1.3",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.1",
     "sass": "^1.32.8"
   },
   "devDependencies": {
