--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "devDependencies": {
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
+    "eslint": "^7.23.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "typescript": "^4.2.3"
   }
 }
