--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
+    "@types/color": "^3.0.1",
     "@types/lodash": "^4.14.168",
     "@types/lodash-es": "^4.17.4",
+    "color": "^3.1.3",
     "date-fns": "^2.19.0",
     "framer-motion": "^4.0.0",
     "gray-matter": "^4.0.2",
@@ -19,6 +21,7 @@
     "next": "^10.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-markdown": "^5.0.3",
     "react-spring": "8.0.27",
     "react-use-gesture": "^9.1.3",
     "remark": "^13.0.0",
