--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
+    "@plaiceholder/css": "^1.0.0",
+    "@plaiceholder/next": "^1.0.0",
     "@types/color": "^3.0.1",
     "@types/lodash": "^4.14.168",
     "@types/lodash-es": "^4.17.4",
@@ -26,7 +28,8 @@
     "react-use-gesture": "^9.1.3",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
-    "sass": "^1.32.8"
+    "sass": "^1.32.8",
+    "sharp": "^0.28.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.35",
