--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/lodash-es": "^4.17.4",
     "color": "^3.1.3",
     "date-fns": "^2.19.0",
+    "firebase": "^8.3.2",
     "framer-motion": "^4.0.0",
     "gray-matter": "^4.0.2",
     "lodash": "^4.17.21",
@@ -24,6 +25,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-markdown": "^5.0.3",
+    "react-query": "^3.13.4",
     "react-spring": "8.0.27",
     "react-use-gesture": "^9.1.3",
     "remark": "^13.0.0",
