--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/lodash-es": "^4.17.4",
     "color": "^3.1.3",
     "date-fns": "^2.19.0",
+    "faunadb": "^4.1.3",
     "firebase": "^8.3.2",
     "framer-motion": "^4.0.0",
     "gray-matter": "^4.0.2",
@@ -31,7 +32,8 @@
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
     "sass": "^1.32.8",
-    "sharp": "^0.28.0"
+    "sharp": "^0.28.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "^14.14.35",
